# LLM-BRAIN

./: .gitignore  .impeccable.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
backend/: package-lock.json  package.json  vitest.config.ts
backend/src/: index.ts
backend/src/api/: auth.ts  brains.ts  chat-sessions.ts  dev-tools.ts  difficulty-mapping.ts  difficulty.ts  edges.ts  evolution.ts  fs.ts  index.ts  learn.ts  llm-config.ts  nodes.ts  personality.ts  task.ts  tools.ts
backend/src/db/: brains.ts  chat-sessions.ts  database.ts  difficulty-mapping.ts  edges.test.ts  edges.ts  execution-history.ts  index.ts  llm-config.ts  nodes.ts  personality.ts  users.ts
backend/src/llm/: orchestrator.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/tools/: dev-tool-manager.ts  index.ts  registry.test.ts  registry.ts
backend/src/types/: index.ts
backend/src/utils/: llm-parser.test.ts  llm-parser.ts  network.test.ts  network.ts  stream-json.ts
backend/src/ws/: index.ts  server.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  site.webmanifest
frontend/src/: App.tsx  ThemeContext.tsx  index.css  main.tsx  theme.ts
frontend/src/hooks/: useGraphLayout.ts  useLeaderFocus.ts  useResponsive.ts  useUpdater.ts  useWebSocket.ts
frontend/src/i18n/: en.ts  index.tsx  zh-CN.ts
scripts/: build-backend-sidecar.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+92 files in other folders)
