[package]
name = "llm-brain"
version = "0.1.0"
description = "有向记忆图 + 多角色 LLM 类脑智能体系统"
authors = ["LLM-BRAIN"]
edition = "2021"

[lib]
name = "llm_brain_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
